--- a/WikiShop/package.json
+++ b/WikiShop/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "uuid": "^9.0.0"
